--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "SASS compile|autoprefix|minimize and live-reload dev server using Browsersync for static HTML",
   "main": "public/index.html",
   "author": "Noah Beij",
-  "scripts": {
+    "scripts": {
     "build:sass": "sass  --no-source-map src/sass:public/css",
     "copy:html": "copyfiles -u 1 ./src/*.html public",
     "copy:assets": "copyfiles -u 1 ./src/**/* public",
@@ -15,18 +15,19 @@
     "watch": "npm-run-all --parallel watch:*",
     "serve": "browser-sync start --server public --files public",
     "start": "npm-run-all copy --parallel watch serve",
-    "build": "npm-run-all copy:html build:*",
+    "build": "npm-run-all copy build:*",
     "postbuild": "postcss public/css/*.css -u autoprefixer cssnano -r --no-map"
   },
   "dependencies": {
     "autoprefixer": "^10.4.2",
+    "bootstrap": "^5.1.3",
     "browser-sync": "^2.27.7",
     "copyfiles": "^2.4.1",
+    "cpx": "^1.5.0",
     "cssnano": "^5.0.17",
     "npm-run-all": "^4.1.5",
     "onchange": "^7.1.0",
     "postcss-cli": "^9.1.0",
-    "sass": "^1.49.8",
-    "bootstrap": "^5.1.3"
+    "sass": "^1.49.8"
   }
 }
